--- a/pom.xml
+++ b/pom.xml
@@ -20,10 +20,11 @@
             <artifactId>json</artifactId>
             <version>20220320</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
         <dependency>
-            <groupId>org.yaml</groupId>
-            <artifactId>snakeyaml</artifactId>
-            <version>1.30</version>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.9.1</version>
         </dependency>
     </dependencies>
 
