Add missing `if` inside `maven.yml`

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -47,6 +47,7 @@ jobs:
           path: |
             ${{ github.workspace }}/**/build/reports/jacoco/prodNormalDebugCoverage/prodNormalDebugCoverage.xml,
             ${{ github.workspace }}/**/build/reports/jacoco/**/debugCoverage.xml
+        if: success() || failure() # always run even if the previous step fails
         with:
           report_paths: '**/build/surefire-reports/TEST-*.xml'
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
