--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -44,13 +44,14 @@ jobs:
           report_paths: '**/build/surefire-reports/TEST-*.xml'
 
   report-coverage:
-    - name: JaCoCo Report
-      uses: Madrapps/jacoco-report@v1.6.1
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        path: |
-          ${{ github.workspace }}/**/build/reports/jacoco/prodNormalDebugCoverage/prodNormalDebugCoverage.xml,
-          ${{ github.workspace }}/**/build/reports/jacoco/**/debugCoverage.xml
+    steps:
+      - name: JaCoCo Report
+        uses: Madrapps/jacoco-report@v1.6.1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          path: |
+            ${{ github.workspace }}/**/build/reports/jacoco/prodNormalDebugCoverage/prodNormalDebugCoverage.xml,
+            ${{ github.workspace }}/**/build/reports/jacoco/**/debugCoverage.xml
 # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
 #    - name: Update dependency graph
 #      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
