--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,8 +19,7 @@ on:
 
 jobs:
   build:
-
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
@@ -30,7 +29,7 @@ jobs:
           java-version: '21'
           distribution: 'oracle'
           cache: maven
-          
+
       - name: Build with Maven
         run: mvn -B package --file pom.xml
 
