Set `jacoco.csv` path for JaCoCo Badge

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -43,3 +43,4 @@ jobs:
         uses: cicirello/jacoco-badge-generator@v2
         with:
           generate-branches-badge: true
+          jacoco-csv-file: build/site/jacoco-ut/jacoco.csv
