Remove unused JUnit 4 dependency

--- a/pom.xml
+++ b/pom.xml
@@ -29,12 +29,6 @@
             <version>2.10.1</version>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13.2</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
             <version>5.10.1</version>
@@ -116,6 +110,7 @@
                     <workingDirectory>${project.basedir}/test</workingDirectory>
                     <!--                    <skip>true</skip>-->
                     <useFile>false</useFile>
+                    <!--suppress UnresolvedMavenProperty -->
                     <argLine>${surefireArgLine} --enable-preview</argLine> <!---enable-preview -->
                 </configuration>
             </plugin>
