--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -73,8 +73,10 @@ jobs:
         
       - name: Update Quark documentation in README.md
         run: |
-          git config --global user.name 'anafro'
-          git config --global user.email 'anafro@users.noreply.github.com'
-          git add -A
-          git commit -m "Update Quark documentation"
-          git push
+          if [[ `git status --porcelain` ]]; then
+            git config --global user.name 'anafro'
+            git config --global user.email 'anafro@users.noreply.github.com'
+            git add -A
+            git commit -m "Update Quark documentation"
+            git push
+          fi
