Add `tree` command to GitHub Actions

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -67,10 +67,13 @@ jobs:
         with:
           name: jacoco-report
           path: target/site/jacoco/
-      
+
+      - name: Print project tree
+        run: tree -d ./
+
       - name: Generate Quark documentation
         run: python generate_docs.py
-        
+
       - name: Update Quark documentation in README.md
         run: |
           if [[ `git status --porcelain` ]]; then
