--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -76,7 +76,7 @@ jobs:
           if [[ `git status --porcelain` ]]; then
             git config --global user.name 'anafro'
             git config --global user.email 'anafro@users.noreply.github.com'
-            git add -A
+            git add README.md
             git commit -m "Update Quark documentation"
             git push
           fi
